# power-link

./: .gitignore  README.md  evaluate.py  pretrain.py  pyproject.toml  run_gnnexp.py  run_pgexp.py  run_powerlink.py
docs/: method.md  reproduce.md
power_link/: __init__.py  baselines.py  data_processing.py  eval_metrics.py  explainer.py
power_link/kge/: __init__.py  compgcn_layer.py  config.py  knowledge_graph.py  load_kg.py  models.py  rgcn_layer.py  wgcn_layer.py
power_link/utils/: __init__.py  eval.py  graph.py  paths.py  seeding.py
scripts/: ablation.sh  explain_compgcn.sh  explain_rgcn.sh  explain_wgcn.sh  pretrain_fb_compgcn.sh  pretrain_fb_lte.sh  pretrain_fb_rgcn.sh  pretrain_fb_wgcn.sh  pretrain_wn_compgcn.sh  pretrain_wn_lte.sh  pretrain_wn_rgcn.sh  pretrain_wn_wgcn.sh  pretrain_yago_compgcn.sh  pretrain_yago_rgcn.sh
tests/: conftest.py  test_powerlink_path_loss.py  test_smoke_pipeline.py
